# ausmalbilder_backend_rust

./: .gitignore  .output.txt  Cargo.toml  Dockerfile  config.yml  docker-compose.yml
.aiassistant/rules/: rules-api.md  rules-general.md  rules-git.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/api/src/http/: error.rs  middleware.rs  mod.rs  response.rs  state.rs
crates/api/src/http/healthcheck/: mod.rs
crates/api/src/http/users/: dtos.rs  handlers.rs  mod.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/ports/: email_service.rs  email_verification_token_repository.rs  mod.rs  password_hasher.rs  password_reset_token_repository.rs  user_repository.rs
crates/application/src/use_cases/: create_user.rs  delete_user.rs  get_user.rs  list_users.rs  mod.rs  request_password_reset.rs  reset_password.rs  signup.rs  verify_email.rs
crates/domain-users/: Cargo.toml
crates/domain-users/src/: lib.rs  telemetry.rs
crates/domain-users/src/models/: user.rs
crates/domain_users/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/db/: mod.rs
crates/infrastructure/src/db/entities/: email_verification_token.rs  mod.rs  password_reset_token.rs  user.rs
crates/infrastructure/src/db/mapper/: mod.rs  user_mapper.rs
crates/infrastructure/src/db/repos/: email_verification_token_repository.rs  mod.rs  password_reset_token_repository.rs  user_repository.rs
crates/infrastructure/src/email/: mailtrap_email_service.rs  mod.rs  stub_email_service.rs
crates/infrastructure/src/security/: argon2_hasher.rs  bcrypt_hasher.rs  mod.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_user_table.rs  m20251220_000001_create_user_table.rs  m20251221_110556_add_deleted_at_to_user.rs  m20251221_144201_split_user_name_and_add_birth_date.rs  m20251221_145926_add_verification_and_role_to_user.rs  m20251221_145937_create_email_verification_token_table.rs  m20251227_000001_create_password_reset_token_table.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/shared/src/config/: auth_settings.rs  database_settings.rs  logging_settings.rs  mailtrap_settings.rs  mod.rs  server_settings.rs  settings.rs
scripts/: seed_users.py
tests/: repro_user_creation.sh
