[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

domain_users = { path = "../domain_users"}
shared = { path = "../shared"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
