[package]
name = "domain-users"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
tracing = ["dep:tracing"]
serde = ["dep:serde"]
