[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
domain-users = { path = "../domain-users" }
