[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1", features = ["derive"] }
shared = { path = "../shared" }
domain-users = { path = "../domain-users" }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
application = { path = "../application" }
argon2 = "0.5"
password-hash = "0.5"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
